初步完成主界面布局

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ZhiHuNews</string>
+    <string name="first_page">首页</string>
+    <string name="close_name">今日热点</string>
 </resources>
