添加新闻具体内容展示

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ZhiHuNews</string>
     <string name="first_page">首页</string>
     <string name="close_name">今日热点</string>
+    <string name="title_activity_news_content">NewsContentActivity</string>
 </resources>
